Add command dialog screenshots to every GUI tab
Render the real Fiji dialog for each documented command offscreen and show it
under the menu path in the GUI tab, so a reader can see what they are about to
fill in without launching Fiji.

68 PNGs in docs/source/command_dialogs/, referenced from 71 GUI tabs. One shared
directory rather than the per-section images/ dirs: three commands are documented
on two pages each and share a file, and a full regeneration stays a single
command with no rename step. Slugs are the screenshot tool's own derivation from
the class name, so the mapping needs no bookkeeping.

Generated against ch.epfl.biop:bigdataviewer-biop-tools:0.23.0 resolved into a
throwaway Maven project, not a local checkout - a working tree is normally a
-SNAPSHOT ahead of the release the docs claim to document.

24 documented commands take only SourceAndConverter[] or BdvHandle, which are
filled from context and have no widget, so their dialog is an empty box with
OK/Cancel. Those keep the menu path alone.

BUMP_DOC.md gains the procedure as a new step 4, since this has to be re-run on
every upstream bump - though only for the commands the diff flagged, not all 68.

Also ignore serve.bat, a local helper that hardcodes machine-specific paths.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>